# The "image" crate and some of its dependencies (especially "inflate" and
# "adler32") are particularly slow in the debug mode. To avoid multi-second
# test execution times, let's optimize them, but keep all the rest in debug mode.
[profile.dev.package.image]
opt-level = 2
[profile.dev.package.png]
opt-level = 2
[profile.dev.package.deflate]
opt-level = 2
[profile.dev.package.adler32]
opt-level = 2

[package]
name = "atari-emulator"
version = "0.1.0"
authors = ["domin"]
edition = "2018"

[dependencies]
image = "0.23.14"
piston_window = "0.120.0"
piston2d-graphics = "0.40.0"
piston = "0.53.0"
rand = "0.8.3"
itertools = "0.10.0"
ctrlc = "3.1.9"
rustasm6502 = "0.1.2"
image-diff = "0.1.13"
