[workspace]
members = ["atari2600", "ya6502"]

# The "image" crate and some of its dependencies (especially "inflate" and
# "adler32") are particularly slow in the debug mode. To avoid multi-second
# test execution times, let's optimize them, but keep all the rest in debug mode.
[profile.dev.package.image]
opt-level = 2
[profile.dev.package.png]
opt-level = 2
[profile.dev.package.deflate]
opt-level = 2
[profile.dev.package.adler32]
opt-level = 2

[patch.crates-io]
# Must override the rustasm6502 crate because of a bug in the STX ZP,Y opcode.
rustasm6502 = { git = "https://github.com/bl-nero/rustasm6502" }