[package]
name = "c64"
version = "0.1.0"
authors = [
    "Bartosz Leper <bl.nero@gmail.com>",
]
edition = "2021"

[dependencies]
image = "0.23.14"
piston_window = "0.120.0"
piston2d-graphics = "0.40.0"
piston = "0.53.0"
rand = "0.8.3"
itertools = "0.10.0"
ctrlc = "3.1.9"
image-diff = "0.1.13"
enum-map = "1.1.1"
rodio = "0.14.0"

common = { path = "../common" }
ya6502 = { path = "../ya6502" }

[build-dependencies]
common = { path = "../common" }