[package]
name = "common"
version = "0.1.0"
authors = [
    "Bartosz Leper <bl.nero@gmail.com>",
]
edition = "2021"

[dependencies]
image = "0.23.14"
itertools = "0.10.0"
image-diff = "0.1.13"
piston_window = "0.120.0"
piston2d-graphics = "0.40.0"
piston = "0.53.0"
regex = "1.5.4"
thiserror = "1.0.30"
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.77"
rustasm6502 = "0.1.4"
clap = { version = "3.1.0", features = ["derive"] }

ya6502 = { path = "../ya6502" }
bounded-vec-deque = "0.1.1"
